--- a/Material_TPs/TP2/TP2.ipynb
+++ b/Material_TPs/TP2/TP2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,26 +21,13 @@
     "import cv2 as cv\n",
     "\n",
     "def create_gauss_filter(h, w, k_size, sigma):\n",
-    "    assert type(k_size) == int and k_size > 0 and k_size % 2 != 0, 'El tamaño del kernel debe ser un entero positivo impar'\n",
-    "    assert sigma > 0, 'El desvío estándar debe ser positivo'\n",
-    "    assert type(h) == int and type(w) == int and h >= k_size and w >= k_size, 'La altura y ancho de la imagen deben ser enteros no menores al tamaño del kernel'\n",
-    "\n",
-    "    #indexes = np.linspace(-(k_size - 1) / 2., (k_size - 1) / 2., k_size)\n",
     "    gaussian_array = (1/(2*np.pi*sigma**2)) * np.exp(-((np.linspace(-(k_size - 1) / 2., (k_size - 1) / 2., k_size))**2)/(2*sigma**2))  #aplicando formula de filtro gausiano\n",
     "    kernel = gaussian_array.reshape((1, -1)) * gaussian_array.reshape((-1, 1))\n",
-    "\n",
-    "    #hk_sustr = h - k_size\n",
-    "    #wk_sustract = w - k_size\n",
-    "    #rows_padding = int(h_k_diff / 2)\n",
-    "    #cols_padding = int(w_k_diff / 2)\n",
-    "\n",
     "    rows_padding = int((h - k_size) / 2)\n",
     "    cols_padding = int((w - k_size) / 2)\n",
     "\n",
     "    kernel_pad = np.pad(kernel / np.sum(kernel),\n",
     "        [\n",
-    "            #(rows_padding, rows_padding if h_k_diff % 2 == 0 else rows_padding + 1),\n",
-    "            #(cols_padding, cols_padding if w_k_diff % 2 == 0 else cols_padding + 1)\n",
     "            (rows_padding, rows_padding if (h - k_size) % 2 == 0 else rows_padding + 1),\n",
     "            (cols_padding, cols_padding if (w - k_size) % 2 == 0 else cols_padding + 1)\n",
     "        ]\n",
@@ -67,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +151,7 @@
        "Text(0.5, 1.0, 'Imagen original escala de grises')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +184,7 @@
        "Text(0.5, 1.0, 'Filtro en Dominio espectral')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2363ac6f220>"
+       "<matplotlib.image.AxesImage at 0x2109d049af0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x236382de760>"
+       "<matplotlib.image.AxesImage at 0x2109a85f2b0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -369,16 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2363ac78850>"
+       "<matplotlib.image.AxesImage at 0x2109a9841f0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
