--- a/Material_TPs/TP2/TP2.ipynb
+++ b/Material_TPs/TP2/TP2.ipynb
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x203dc97fac0>"
+       "<matplotlib.image.AxesImage at 0x29d97d12ac0>"
       ]
      },
      "execution_count": 7,
@@ -316,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x203da102280>"
+       "<matplotlib.image.AxesImage at 0x29d954c0280>"
       ]
      },
      "execution_count": 8,
@@ -362,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x203da2461c0>"
+       "<matplotlib.image.AxesImage at 0x29d958071c0>"
       ]
      },
      "execution_count": 9,
@@ -437,8 +437,8 @@
     "    kernel_espectral, ft_kernel_espectral = create_gauss_filter(h, w, kernel_size, std_dev)\n",
     "    imag_fft = fft2(img2)\n",
     "    img_blur_fft = imag_fft * ft_kernel_espectral  # fft inversa para blur\n",
-    "    imagen_blurred = np.abs(ifft2(img_blur_fft ))\n",
-    "    quality_measure_espectral = get_image_quality_meas(imagen_blurred)\n",
+    "    img_blur = np.abs(ifft2(img_blur_fft ))\n",
+    "    quality_measure_espectral = get_image_quality_meas(img_blur)\n",
     "    kernel_conv_tmp = cv.getGaussianKernel(kernel_size, std_dev)\n",
     "    kernel_conv_tem2 = kernel_conv_tmp @ kernel_conv_tmp.T  \n",
     "    img_blur = cv.filter2D(img2, -1, kernel_conv_tem2)\n",
@@ -466,14 +466,14 @@
     "# Generar datos para la desviación estándar y para los datos de filtrado espectral y convolucional\n",
     "std_dev_values = np.linspace(0.1, 8, 50)\n",
     "\n",
-    "quality_values_espectral_std=[]\n",
-    "quality_values_conv_std=[]\n",
+    "qua_val_espectral_std=[]\n",
+    "qua_val_conv_std=[]\n",
     "for std_dev in std_dev_values:\n",
-    "               quality_values_espectral_std_idx, quality_values_conv_std_idx=quality_measure_esp_conv(std_dev)             \n",
-    "               quality_values_espectral_std.append(quality_values_espectral_std_idx) \n",
-    "               quality_values_conv_std.append(quality_values_conv_std_idx)\n",
-    "plt.plot(std_dev_values, quality_values_espectral_std, label='Filtrado Espectral',color='red')\n",
-    "plt.plot(std_dev_values, quality_values_conv_std, label='Filtrado Convolucional',color='blue')\n",
+    "               qua_val_espectral_std_idx, qua_val_conv_std_idx=quality_measure_esp_conv(std_dev)             \n",
+    "               qua_val_espectral_std.append(qua_val_espectral_std_idx) \n",
+    "               qua_val_conv_std.append(qua_val_conv_std_idx)\n",
+    "plt.plot(std_dev_values, qua_val_espectral_std, label='Filtrado Espectral',color='red')\n",
+    "plt.plot(std_dev_values, qua_val_conv_std, label='Filtrado Convolucional',color='blue')\n",
     "plt.xlabel('Standart Deviation of Gaussian Blur')\n",
     "plt.ylabel('Image qualiy measure(FM)')\n",
     "plt.title('Image qualiy measure(FM) vs Standart Deviation of Gaussian Blur')\n",
